        content. Reported by Martin Svensson.
      - Fixed bug in relative references computation.
        Contributed by Tal Liron.
      - Client connectors automatically created by the ClientResource
        are now automatically stopped upon garbage collection to prevent
        dormant threads. Reported by Dustin Jenkins and TK Kocheran.
    - Misc

- 2.0 Release Candidate 4 (2010-06-01)
    - API changes
      - Changed character oriented subclasses of OutputRepresentation
        to extend WriterRepresentation instead for consistent character
        set handling.
      - StringRepresentation now derives from CharacterRepresentation.
      - WriterRepresentation now uses HTTP's default character set when
        no one is provided (ISO 8859-1).
      - Added missing ServerResource#abort() method.
        Reported by Tal Liron.
      - Deprecated the GwtShellServletWrapper as the hosted mode has 
        been removed in GWT 2.0. Reported by Rob Heittman.
      - Fixed design of the Engine class to allow custom subclasses to 
        be registered without systematically creating a new 
        EngineClassLoader. The classLoader and userClassLoader 
        properties are no longer static. A createClassLoader() method
        was added as well as a static getResource(String) : URL one. 
        Reported by Bruno Harbulot.
      - Deprecated WadlResource. Use WadlServerResource instead.        
      - Added get/setRouter methods and deprecated getSpringBeanRouter
        in the SpringBeanFinder class. Reported by Thierry Templier.
      - The status name is now returned to clients for display instead
        of the description, in order to not expose internal information
        by default for security reasons. Reported by Marc Knaup.
      - Added the System property "org.restlet.engine.io.buffer.size"
        that allows to set the buffer size for all instances of the 
        BufferedReader class.
    - Bugs fixed